TestRepo2/src/objects/File__c.object
<CustomObject>
    <description>File store information about files inside folders</description>
    <fields>
        <fullName>Available_Until__c</fullName>
        <label>Available Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand_Names__c</fullName>
        <label>Brands</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Brand IDs</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Files</relationshipLabel>
        <relationshipName>Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Content_ID__c</fullName>
        <label>Content ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <label>Content Version Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distributor_Names__c</fullName>
        <description>Names of selected distributors.</description>
        <label>Distributors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distributors__c</fullName>
        <label>Distributor IDs</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Division_Access__c</fullName>
        <label>Division Access</label>
        <picklist>
            <picklistValues>
                <fullName>Charmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Charmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Folder_Names__c</fullName>
        <description>Names of selected folders.</description>
        <label>Folders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Folders__c</fullName>
        <label>Folder IDs</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Image_Resolution__c</fullName>
        <label>Image Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Only_For_Internal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only For Internal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrgUnitsNames__c</fullName>
        <label>Organizational Units</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrgUnits__c</fullName>
        <label>OrgUnit Id</label>
        <picklist>
            <picklistValues>
                <fullName>OrgUnit</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Page_Section__c</fullName>
        <label>Page Section</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portfolio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preview_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preview Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preview_Id__c</fullName>
        <label>Preview Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded_date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Uploaded date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Video_Id__c</fullName>
        <label>Video Id</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filesize__c</fullName>
        <label>filesize</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filetype__c</fullName>
        <label>filetype</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>share_link__c</fullName>
        <label>share_link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Page_Section__c</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Folder_Names__c</columns>
        <columns>Folders__c</columns>
        <columns>Distributors__c</columns>
        <columns>Division__c</columns>
        <columns>filesize__c</columns>
        <columns>Calendar__c</columns>
        <columns>Distributor_Names__c</columns>
        <columns>Division_Access__c</columns>
        <columns>Only_For_Internal_User__c</columns>
        <columns>Brand_Names__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Collaboration</fullName>
        <columns>Page_Section__c</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Folder_Names__c</columns>
        <columns>Folders__c</columns>
        <columns>Distributors__c</columns>
        <columns>Division__c</columns>
        <columns>filesize__c</columns>
        <columns>Calendar__c</columns>
        <columns>Distributor_Names__c</columns>
        <columns>Division_Access__c</columns>
        <columns>Only_For_Internal_User__c</columns>
        <columns>Brand_Names__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Page_Section__c</field>
            <operation>equals</operation>
            <value>Collaboration</value>
        </filters>
        <label>All Collaboration Files</label>
    </listViews>
    <listViews>
        <fullName>All_Performance_Management</fullName>
        <columns>Page_Section__c</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Folder_Names__c</columns>
        <columns>Folders__c</columns>
        <columns>Distributors__c</columns>
        <columns>Division__c</columns>
        <columns>filesize__c</columns>
        <columns>Calendar__c</columns>
        <columns>Distributor_Names__c</columns>
        <columns>Division_Access__c</columns>
        <columns>Only_For_Internal_User__c</columns>
        <columns>Brand_Names__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Page_Section__c</field>
            <operation>equals</operation>
            <value>Performance Management</value>
        </filters>
        <label>All Performance Management</label>
    </listViews>
    <listViews>
        <fullName>All_Planning</fullName>
        <columns>Page_Section__c</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Folder_Names__c</columns>
        <columns>Folders__c</columns>
        <columns>filesize__c</columns>
        <columns>Calendar__c</columns>
        <columns>Only_For_Internal_User__c</columns>
        <columns>Brand_Names__c</columns>
        <columns>Division__c</columns>
        <columns>Distributors__c</columns>
        <columns>Distributor_Names__c</columns>
        <columns>Division_Access__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Page_Section__c</field>
            <operation>equals</operation>
            <value>Planning</value>
        </filters>
        <label>All Planning Files</label>
    </listViews>
    <nameField>
        <displayFormat>file-{0000000}</displayFormat>
        <label>File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AvailableUntilDateValidator</fullName>
        <active>false</active>
        <description>Available Until Date has to be greater or equal that current date.</description>
        <errorConditionFormula>Available_Until__c  &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Available_Until__c</errorDisplayField>
        <errorMessage>Date has to be greater or equal to current date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Classification_required_for_portfolio</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Portfolio__c , ISNULL( Classification__c) , false)</errorConditionFormula>
        <errorMessage>Classification field is required for portfolio documents.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DistributorRequired</fullName>
        <active>true</active>
        <description>If for Performance Management and Collaboration if Division is Franchise or Independent Distributor should be required.</description>
        <errorConditionFormula>( ISPICKVAL(Page_Section__c ,  &apos;Performance Management&apos; )  || ISPICKVAL(Page_Section__c ,  &apos;Collaboration&apos; )   ) &amp;&amp; (   ISPICKVAL(Division__c  , &apos;Franchise&apos; ) ||  ISPICKVAL(Division__c  , &apos;Independent&apos;) ) &amp;&amp;  ISNULL( Distributors__c ) &amp;&amp; ( Only_For_Internal_User__c  == false)</errorConditionFormula>
        <errorDisplayField>Distributors__c</errorDisplayField>
        <errorMessage>Please choose at least one Distrubutor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartEndDateValidator</fullName>
        <active>true</active>
        <description>Start date must be lower than end date.</description>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Start Date must be lower than or equal to End Date</errorMessage>
    </validationRules>
</CustomObject>